--- a/dream-tool-core/src/main/resources/internation/messages_en_US.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_en_US.properties
@@ -38,6 +38,7 @@ msg_db_create_fail=Failed to add new data
 msg_db_delete_fail=Failed to delete data
 msg_db_modify_fail=Failed to modify data
 msg_db_query_fail=Failed to query data
+msg_db_duplicate_key_error=Duplicate database primary key
 msg_file_not_exist=File does not exist
 msg_file_directory_not_exist=Directory does not exist
 msg_file_not_null=File can't be null
