--- a/dream-tool-core/src/main/resources/internation/messages_en_US.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_en_US.properties
@@ -34,6 +34,7 @@ msg_role_permission_denied=Insufficient role permissions
 msg_param_error=Parameter is error
 msg_param_not_null=Parameter can not be null
 msg_param_invalid=Parameter is invalid
+msg_db_error=database error
 msg_db_create_fail=Failed to add new data
 msg_db_delete_fail=Failed to delete data
 msg_db_modify_fail=Failed to modify data
