--- a/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
@@ -34,6 +34,7 @@ msg_role_permission_denied=\u89D2\u8272\u6743\u9650\u4E0D\u8DB3
 msg_param_error=\u53C2\u6570\u9519\u8BEF
 msg_param_not_null=\u53C2\u6570\u4E0D\u80FD\u4E3A\u7A7A
 msg_param_invalid=\u53C2\u6570\u975E\u6CD5
+msg_db_error=\u6570\u636E\u5E93\u9519\u8BEF
 msg_db_create_fail=\u65B0\u589E\u5931\u8D25
 msg_db_delete_fail=\u5220\u9664\u5931\u8D25
 msg_db_modify_fail=\u66F4\u65B0\u5931\u8D25
