--- a/dream-tool-core/src/main/resources/internation/messages_en_US.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_en_US.properties
@@ -31,6 +31,7 @@ msg_auth_token_illegal=Authorization token is illegal
 msg_role_not_exist=Role does not exist
 msg_role_not_operate_admin=Cannot operate super administrator
 msg_role_permission_denied=Insufficient role permissions
+msg_role_unassigned_resource=Role unassigned resource
 msg_param_error=Parameter is error
 msg_param_not_null=Parameter can not be null
 msg_param_invalid=Parameter is invalid
