--- a/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
@@ -31,6 +31,7 @@ msg_auth_token_illegal=token\u4E0D\u5408\u6CD5
 msg_role_not_exist=\u8BE5\u89D2\u8272\u4E0D\u5B58\u5728
 msg_role_not_operate_admin=\u4E0D\u80FD\u64CD\u4F5C\u8D85\u7EA7\u7BA1\u7406\u5458
 msg_role_permission_denied=\u89D2\u8272\u6743\u9650\u4E0D\u8DB3
+msg_role_unassigned_resource=\u89D2\u8272\u672A\u5206\u914D\u8D44\u6E90
 msg_param_error=\u53C2\u6570\u9519\u8BEF
 msg_param_not_null=\u53C2\u6570\u4E0D\u80FD\u4E3A\u7A7A
 msg_param_invalid=\u53C2\u6570\u975E\u6CD5
