--- a/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
@@ -1,8 +1,7 @@
 msg_fail=\u8BF7\u6C42\u5931\u8D25
 msg_success=\u8BF7\u6C42\u6210\u529F
 msg_unknown=\u672A\u77E5\u9519\u8BEF
-msg_timestamp_null=\u65F6\u95F4\u6233\u4E0D\u80FD\u4E3A\u7A7A
-msg_timestamp_error=\u65F6\u95F4\u6233\u9519\u8BEF
+
 msg_login_success_login=\u767B\u5F55\u6210\u529F
 msg_login_success_logout=\u767B\u51FA\u6210\u529F
 msg_login_fail=\u767B\u5F55\u5931\u8D25,\u7528\u6237\u540D\u6216\u5BC6\u7801\u9519\u8BEF,\u8BF7\u91CD\u8BD5
@@ -14,6 +13,7 @@ msg_login_captcha_error=\u9A8C\u8BC1\u7801\u9519\u8BEF,\u8BF7\u5237\u65B0
 msg_login_captcha_empty=\u9A8C\u8BC1\u7801\u4E3A\u7A7A
 msg_login_captcha_not_exist=\u9A8C\u8BC1\u7801\u4E0D\u5B58\u5728,\u8BF7\u5237\u65B0
 msg_login_captcha_illegal=\u9A8C\u8BC1\u7801\u4E0D\u5408\u6CD5,\u8BF7\u91CD\u65B0\u8F93\u5165
+
 msg_user_not_exist=\u8BE5\u7528\u6237\u4E0D\u5B58\u5728
 msg_user_not_distribute_role=\u8BE5\u7528\u6237\u672A\u5206\u914D\u89D2\u8272
 msg_user_not_avaliable=\u7528\u6237\u4E0D\u53EF\u7528,\u8BF7\u8054\u7CFB\u5BA2\u6237
@@ -21,6 +21,7 @@ msg_user_is_black=\u7528\u6237\u4E3A\u9ED1\u540D\u5355\u7528\u6237,\u8BF7\u8054\
 msg_user_lock=\u7528\u6237\u88AB\u9501\u5B9A,\u8BF7\u8054\u7CFB\u5BA2\u6237
 msg_user_pwd_original_error=\u539F\u59CB\u5BC6\u7801\u9519\u8BEF
 msg_user_pwd_old_not_same_new=\u65B0\u5BC6\u7801\u4E0D\u80FD\u548C\u65E7\u5BC6\u7801\u76F8\u540C
+
 msg_auth_empty=\u6743\u9650\u9A8C\u8BC1\u4FE1\u606F\u4E3A\u7A7A
 msg_auth_fail=\u6743\u9650\u9A8C\u8BC1\u5931\u8D25
 msg_auth_denied=\u6743\u9650\u4E0D\u8DB3
@@ -28,30 +29,51 @@ msg_auth_token_error=token\u9519\u8BEF
 msg_auth_token_empty=token\u4E3A\u7A7A
 msg_auth_token_not_exist=token\u8FC7\u671F,\u8BF7\u91CD\u65B0\u767B\u5F55
 msg_auth_token_illegal=token\u4E0D\u5408\u6CD5
+
 msg_role_not_exist=\u8BE5\u89D2\u8272\u4E0D\u5B58\u5728
 msg_role_not_operate_admin=\u4E0D\u80FD\u64CD\u4F5C\u8D85\u7EA7\u7BA1\u7406\u5458
 msg_role_permission_denied=\u89D2\u8272\u6743\u9650\u4E0D\u8DB3
 msg_role_unassigned_resource=\u89D2\u8272\u672A\u5206\u914D\u8D44\u6E90
+
 msg_param_error=\u53C2\u6570\u9519\u8BEF
 msg_param_not_null=\u53C2\u6570\u4E0D\u80FD\u4E3A\u7A7A
 msg_param_invalid=\u53C2\u6570\u975E\u6CD5
+msg_param_required_is_null=\u5FC5\u4F20\u53C2\u6570\u4E0D\u80FD\u4E3A\u7A7A
+
+msg_format_param_required_is_null=\u5FC5\u4F20\u53C2\u6570 {0} \u4E0D\u80FD\u4E3A\u7A7A
+
 msg_db_error=\u6570\u636E\u5E93\u9519\u8BEF
 msg_db_create_fail=\u65B0\u589E\u5931\u8D25
 msg_db_delete_fail=\u5220\u9664\u5931\u8D25
 msg_db_modify_fail=\u66F4\u65B0\u5931\u8D25
 msg_db_query_fail=\u67E5\u8BE2\u5931\u8D25
 msg_db_duplicate_key_error=\u6570\u636E\u5E93\u4E3B\u952E\u91CD\u590D
+
 msg_file_not_exist=\u6587\u4EF6\u4E0D\u5B58\u5728
 msg_file_directory_not_exist=\u76EE\u5F55\u4E0D\u5B58\u5728
 msg_file_not_null=\u6587\u4EF6\u4E0D\u80FD\u4E3Anull
 msg_file_directory_not_null=\u76EE\u5F55\u4E0D\u80FD\u4E3Anull
 msg_file_upload_failed=\u6587\u4EF6\u4E0A\u4F20\u5931\u8D25
 msg_file_download_failed=\u6587\u4EF6\u4E0B\u8F7D\u5931\u8D25
+
 msg_mail_username_null=\u90AE\u4EF6\u53D1\u9001\u4EBA\u4E0D\u80FD\u4E3A\u7A7A
 msg_mail_password_null=\u90AE\u4EF6\u53D1\u9001\u4EBA\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
 msg_mail_from_null=\u90AE\u4EF6\u53D1\u9001\u5730\u5740\u4E0D\u80FD\u4E3A\u7A7A
 msg_mail_to_null=\u90AE\u4EF6\u6536\u4EF6\u4EBA\u4E0D\u80FD\u4E3A\u7A7A
 msg_mail_content_null=\u90AE\u4EF6\u5185\u5BB9\u4E0D\u80FD\u4E3A\u7A7A
+
 msg_sys_error=\u7CFB\u7EDF\u5185\u90E8\u9519\u8BEF,\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458
 msg_sys_maintain=\u7CFB\u7EDF\u7EF4\u62A4\u4E2D,\u8BF7\u8010\u5FC3\u7B49\u5F85
 msg_sys_busy=\u7CFB\u7EDF\u7E41\u5FD9,\u8BF7\u7A0D\u540E\u91CD\u8BD5
+
+msg_request_url_not_exist=\u8BF7\u6C42URL\u4E0D\u5B58\u5728
+msg_request_http_method_not_supported=\u8BF7\u6C42\u65B9\u5F0F\u4E0D\u652F\u6301
+msg_request_media_type_not_supported=\u8BF7\u6C42\u5A92\u4F53\u7C7B\u578B\u4E0D\u652F\u6301
+msg_request_time_out=\u8BF7\u6C42\u8D85\u65F6
+
+msg_format_request_url_not_exist=\u8BF7\u6C42URL {0} \u4E0D\u5B58\u5728
+msg_format_request_http_method_not_supported=\u8BF7\u6C42\u65B9\u5F0F {0} \u4E0D\u652F\u6301
+msg_format_request_media_type_not_supported=\u8BF7\u6C42\u5A92\u4F53\u7C7B\u578B {0} \u4E0D\u652F\u6301
+
+msg_timestamp_null=\u65F6\u95F4\u6233\u4E0D\u80FD\u4E3A\u7A7A
+msg_timestamp_error=\u65F6\u95F4\u6233\u9519\u8BEF
