--- a/dream-tool-core/src/main/resources/internation/messages_en_US.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_en_US.properties
@@ -2,6 +2,10 @@ msg_fail=Request was aborted
 msg_success=Successful request
 msg_unknown=Unknown error
 
+msg_internal_unauthorized=Not authorized and not accessible
+msg_internal_forbidden=No permissions, access prohibited
+msg_internal_server_error=The server is abnormal, please try again later
+
 msg_login_success_login=Login success
 msg_login_success_logout=Logout success
 msg_login_fail=Login failure,username or password error,please try again
