--- a/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
@@ -2,6 +2,10 @@ msg_fail=\u8BF7\u6C42\u5931\u8D25
 msg_success=\u8BF7\u6C42\u6210\u529F
 msg_unknown=\u672A\u77E5\u9519\u8BEF
 
+msg_internal_unauthorized=\u8FD8\u672A\u6388\u6743,\u4E0D\u80FD\u8BBF\u95EE
+msg_internal_forbidden=\u6CA1\u6709\u6743\u9650,\u7981\u6B62\u8BBF\u95EE
+msg_internal_server_error=\u670D\u52A1\u5668\u5F02\u5E38,\u8BF7\u7A0D\u540E\u518D\u8BD5
+
 msg_login_success_login=\u767B\u5F55\u6210\u529F
 msg_login_success_logout=\u767B\u51FA\u6210\u529F
 msg_login_fail=\u767B\u5F55\u5931\u8D25,\u7528\u6237\u540D\u6216\u5BC6\u7801\u9519\u8BEF,\u8BF7\u91CD\u8BD5
