--- a/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
@@ -52,6 +52,8 @@ msg_db_delete_fail=\u5220\u9664\u5931\u8D25
 msg_db_modify_fail=\u66F4\u65B0\u5931\u8D25
 msg_db_query_fail=\u67E5\u8BE2\u5931\u8D25
 msg_db_duplicate_key_error=\u6570\u636E\u5E93\u4E3B\u952E\u91CD\u590D
+msg_db_data_exist=\u6570\u636E\u5DF2\u5B58\u5728
+msg_db_data_none=\u6570\u636E\u4E0D\u5B58\u5728
 
 msg_file_not_exist=\u6587\u4EF6\u4E0D\u5B58\u5728
 msg_file_directory_not_exist=\u76EE\u5F55\u4E0D\u5B58\u5728
