--- a/dream-tool-core/src/main/resources/internation/messages_en_US.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_en_US.properties
@@ -1,85 +1,85 @@
-msg_fail=Request was aborted
-msg_success=Successful request
-msg_unknown=Unknown error
+msg.fail=Request was aborted
+msg.success=Successful request
+msg.unknown=Unknown error
 
-msg_internal_unauthorized=Not authorized and not accessible
-msg_internal_forbidden=No permissions, access prohibited
-msg_internal_server_error=The server is abnormal, please try again later
+msg.internal.unauthorized=Not authorized and not accessible
+msg.internal.forbidden=No permissions, access prohibited
+msg.internal.server.error=The server is abnormal, please try again later
 
-msg_login_success_login=Login success
-msg_login_success_logout=Logout success
-msg_login_fail=Login failure,username or password error,please try again
-msg_login_fail_username=Login failure,username does not exist,please try again
-msg_login_fail_password=Login failure,password is error,please try again
-msg_login_fail_timeout=Login timeout,please login again
-msg_login_fail_not_login=User not logged in, please log in first
-msg_login_captcha_error=The captcha is error,please refresh
-msg_login_captcha_empty=The captcha is empty
-msg_login_captcha_not_exist=The captcha does not exist,please refresh
-msg_login_captcha_illegal=The captcha is illegal,please re-enter
+msg.login.success.login=Login success
+msg.login.success.logout=Logout success
+msg.login.fail=Login failure,username or password error,please try again
+msg.login.fail.username=Login failure,username does not exist,please try again
+msg.login.fail.password=Login failure,password is error,please try again
+msg.login.fail.timeout=Login timeout,please login again
+msg.login.fail.not.login=User not logged in, please log in first
+msg.login.captcha.error=The captcha is error,please refresh
+msg.login.captcha.empty=The captcha is empty
+msg.login.captcha.not.exist=The captcha does not exist,please refresh
+msg.login.captcha.illegal=The captcha is illegal,please re-enter
 
-msg_user_not_exist=The user does not exist
-msg_user_not_distribute_role=The user is not assigned roles
-msg_user_not_avaliable=The user is not available, please contact the customer service
-msg_user_is_black=Users are blacklisted users, please contact customer service
-msg_user_lock=User locked, please contact customer service
-msg_user_pwd_original_error=Original password error
-msg_user_pwd_old_not_same_new=Old and new passwords cannot be the same
+msg.user.not.exist=The user does not exist
+msg.user.not.distribute.role=The user is not assigned roles
+msg.user.not.avaliable=The user is not available, please contact the customer service
+msg.user.is.black=Users are blacklisted users, please contact customer service
+msg.user.lock=User locked, please contact customer service
+msg.user.pwd.original.error=Original password error
+msg.user.pwd.old.not.same.new=Old and new passwords cannot be the same
 
-msg_auth_empty=Authorizition messages cannot be null
-msg_auth_fail=Authorizition validation failed
-msg_auth_denied=Authorization denied
-msg_auth_token_error=Authorization token is error
-msg_auth_token_empty=Authorization token is empty
-msg_auth_token_not_exist=Authorization token is not exist,you should login again
-msg_auth_token_illegal=Authorization token is illegal
+msg.auth.empty=Authorizition messages cannot be null
+msg.auth.fail=Authorizition validation failed
+msg.auth.denied=Authorization denied
+msg.auth.token.error=Authorization token is error
+msg.auth.token.empty=Authorization token is empty
+msg.auth.token.not.exist=Authorization token is not exist,you should login again
+msg.auth.token.illegal=Authorization token is illegal
 
-msg_role_not_exist=Role does not exist
-msg_role_not_operate_admin=Cannot operate super administrator
-msg_role_permission_denied=Insufficient role permissions
-msg_role_unassigned_resource=Role unassigned resource
+msg.role.not.exist=Role does not exist
+msg.role.not.operate.admin=Cannot operate super administrator
+msg.role.permission.denied=Insufficient role permissions
+msg.role.unassigned.resource=Role unassigned resource
 
-msg_param_error=Parameter is error
-msg_param_not_null=Parameter can not be null
-msg_param_invalid=Parameter is invalid
-msg_param_required_is_null=The required parameter can't be empty
+msg.param.error=Parameter is error
+msg.param.not.null=Parameter can not be null
+msg.param.invalid=Parameter is invalid
+msg.param.required.is.null=The required parameter can't be empty
 
-msg_format_param_required_is_null=The required parameter {0} can't be empty
+msg.format.param.required.is.null=The required parameter {0} can't be empty
 
-msg_db_error=database error
-msg_db_create_fail=Failed to add new data
-msg_db_delete_fail=Failed to delete data
-msg_db_modify_fail=Failed to modify data
-msg_db_query_fail=Failed to query data
-msg_db_duplicate_key_error=Duplicate database primary key
-msg_db_data_exist=Data is already exist
-msg_db_data_none=Data is not exist
+msg.db.error=database error
+msg.db.create.fail=Failed to add new data
+msg.db.delete.fail=Failed to delete data
+msg.db.modify.fail=Failed to modify data
+msg.db.query.fail=Failed to query data
+msg.db.duplicate.key.error=Duplicate database primary key
+msg.db.data.exist=Data is already exist
+msg.db.data.none=Data is not exist
 
-msg_file_not_exist=File does not exist
-msg_file_directory_not_exist=Directory does not exist
-msg_file_not_null=File can't be null
-msg_file_directory_not_null=Directory can't be null
-msg_file_upload_failed=File upload failed
-msg_file_download_failed=File download failed
+msg.file.not.exist=File does not exist
+msg.file.directory.not.exist=Directory does not exist
+msg.file.not.null=File can't be null
+msg.file.directory.not.null=Directory can't be null
+msg.file.upload.failed=File upload failed
+msg.file.download.failed=File download failed
 
-msg_mail_username_null=Email sender user name cannot be null
-msg_mail_password_null=The sender mi'ma cannot be null
-msg_mail_from_null=Email sender address cannot be null
-msg_mail_to_null=Mail collector address cannot be null
-msg_mail_content_null=The message content cannot be null
+msg.mail.username.null=Email sender user name cannot be null
+msg.mail.password.null=The sender mi'ma cannot be null
+msg.mail.from.null=Email sender address cannot be null
+msg.mail.to.null=Mail collector address cannot be null
+msg.mail.content.null=The message content cannot be null
 
-msg_sys_error=System internal error,please contact the administrator
-msg_sys_maintain=The system is under maintenance.Please wait patiently
-msg_sys_busy=The system is busy,please try later
+msg.sys.error=System internal error,please contact the administrator
+msg.sys.maintain=The system is under maintenance.Please wait patiently
+msg.sys.busy=The system is busy,please try later
 
-msg_request_url_not_exist=Request URL does not exist
-msg_request_http_method_not_supported=The request method is not supported
-msg_request_media_type_not_supported=The request media type is not supported
-msg_request_time_out=Request timeout
+msg.request.url.not.exist=Request URL does not exist
+msg.request.http.method.not.supported=The request method is not supported
+msg.request.media.type.not.supported=The request media type is not supported
+msg.request.time.out=Request timeout
 
-msg_format_request_url_not_exist=Request URL {0} does not exist
-msg_format_request_http_method_not_supported=The request method {0} is not supported
-msg_format_request_media_type_not_supported=The request media type {0} is not supported
+msg.format.request.url.not.exist=Request URL {0} does not exist
+msg.format.request.http.method.not.supported=The request method {0} is not supported
+msg.format.request.media.type.not.supported=The request media type {0} is not supported
 
-msg_timestamp_null=Timestamp cannot be null
-msg_timestamp_error=Timestamp error
+msg.timestamp.null=Timestamp cannot be null
+msg.timestamp.error=Timestamp error
