--- a/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
+++ b/dream-tool-core/src/main/resources/internation/messages_zh_CN.properties
@@ -1,85 +1,85 @@
-msg_fail=\u8BF7\u6C42\u5931\u8D25
-msg_success=\u8BF7\u6C42\u6210\u529F
-msg_unknown=\u672A\u77E5\u9519\u8BEF
+msg.fail=\u8BF7\u6C42\u5931\u8D25
+msg.success=\u8BF7\u6C42\u6210\u529F
+msg.unknown=\u672A\u77E5\u9519\u8BEF
 
-msg_internal_unauthorized=\u8FD8\u672A\u6388\u6743,\u4E0D\u80FD\u8BBF\u95EE
-msg_internal_forbidden=\u6CA1\u6709\u6743\u9650,\u7981\u6B62\u8BBF\u95EE
-msg_internal_server_error=\u670D\u52A1\u5668\u5F02\u5E38,\u8BF7\u7A0D\u540E\u518D\u8BD5
+msg.internal.unauthorized=\u8FD8\u672A\u6388\u6743,\u4E0D\u80FD\u8BBF\u95EE
+msg.internal.forbidden=\u6CA1\u6709\u6743\u9650,\u7981\u6B62\u8BBF\u95EE
+msg.internal.server.error=\u670D\u52A1\u5668\u5F02\u5E38,\u8BF7\u7A0D\u540E\u518D\u8BD5
 
-msg_login_success_login=\u767B\u5F55\u6210\u529F
-msg_login_success_logout=\u767B\u51FA\u6210\u529F
-msg_login_fail=\u767B\u5F55\u5931\u8D25,\u7528\u6237\u540D\u6216\u5BC6\u7801\u9519\u8BEF,\u8BF7\u91CD\u8BD5
-msg_login_fail_username=\u767B\u5F55\u5931\u8D25,\u7528\u6237\u4E0D\u5B58\u5728,\u8BF7\u91CD\u8BD5
-msg_login_fail_password=\u767B\u5F55\u5931\u8D25,\u5BC6\u7801\u9519\u8BEF,\u8BF7\u91CD\u8BD5
-msg_login_fail_timeout=\u767B\u5F55\u8D85\u65F6,\u8BF7\u91CD\u65B0\u767B\u5F55
-msg_login_fail_not_login=\u7528\u6237\u672A\u767B\u5F55,\u8BF7\u5148\u767B\u5F55
-msg_login_captcha_error=\u9A8C\u8BC1\u7801\u9519\u8BEF,\u8BF7\u5237\u65B0
-msg_login_captcha_empty=\u9A8C\u8BC1\u7801\u4E3A\u7A7A
-msg_login_captcha_not_exist=\u9A8C\u8BC1\u7801\u4E0D\u5B58\u5728,\u8BF7\u5237\u65B0
-msg_login_captcha_illegal=\u9A8C\u8BC1\u7801\u4E0D\u5408\u6CD5,\u8BF7\u91CD\u65B0\u8F93\u5165
+msg.login.success.login=\u767B\u5F55\u6210\u529F
+msg.login.success.logout=\u767B\u51FA\u6210\u529F
+msg.login.fail=\u767B\u5F55\u5931\u8D25,\u7528\u6237\u540D\u6216\u5BC6\u7801\u9519\u8BEF,\u8BF7\u91CD\u8BD5
+msg.login.fail.username=\u767B\u5F55\u5931\u8D25,\u7528\u6237\u4E0D\u5B58\u5728,\u8BF7\u91CD\u8BD5
+msg.login.fail.password=\u767B\u5F55\u5931\u8D25,\u5BC6\u7801\u9519\u8BEF,\u8BF7\u91CD\u8BD5
+msg.login.fail.timeout=\u767B\u5F55\u8D85\u65F6,\u8BF7\u91CD\u65B0\u767B\u5F55
+msg.login.fail.not.login=\u7528\u6237\u672A\u767B\u5F55,\u8BF7\u5148\u767B\u5F55
+msg.login.captcha.error=\u9A8C\u8BC1\u7801\u9519\u8BEF,\u8BF7\u5237\u65B0
+msg.login.captcha.empty=\u9A8C\u8BC1\u7801\u4E3A\u7A7A
+msg.login.captcha.not.exist=\u9A8C\u8BC1\u7801\u4E0D\u5B58\u5728,\u8BF7\u5237\u65B0
+msg.login.captcha.illegal=\u9A8C\u8BC1\u7801\u4E0D\u5408\u6CD5,\u8BF7\u91CD\u65B0\u8F93\u5165
 
-msg_user_not_exist=\u8BE5\u7528\u6237\u4E0D\u5B58\u5728
-msg_user_not_distribute_role=\u8BE5\u7528\u6237\u672A\u5206\u914D\u89D2\u8272
-msg_user_not_avaliable=\u7528\u6237\u4E0D\u53EF\u7528,\u8BF7\u8054\u7CFB\u5BA2\u6237
-msg_user_is_black=\u7528\u6237\u4E3A\u9ED1\u540D\u5355\u7528\u6237,\u8BF7\u8054\u7CFB\u5BA2\u6237
-msg_user_lock=\u7528\u6237\u88AB\u9501\u5B9A,\u8BF7\u8054\u7CFB\u5BA2\u6237
-msg_user_pwd_original_error=\u539F\u59CB\u5BC6\u7801\u9519\u8BEF
-msg_user_pwd_old_not_same_new=\u65B0\u5BC6\u7801\u4E0D\u80FD\u548C\u65E7\u5BC6\u7801\u76F8\u540C
+msg.user.not.exist=\u8BE5\u7528\u6237\u4E0D\u5B58\u5728
+msg.user.not.distribute.role=\u8BE5\u7528\u6237\u672A\u5206\u914D\u89D2\u8272
+msg.user.not.avaliable=\u7528\u6237\u4E0D\u53EF\u7528,\u8BF7\u8054\u7CFB\u5BA2\u6237
+msg.user.is.black=\u7528\u6237\u4E3A\u9ED1\u540D\u5355\u7528\u6237,\u8BF7\u8054\u7CFB\u5BA2\u6237
+msg.user.lock=\u7528\u6237\u88AB\u9501\u5B9A,\u8BF7\u8054\u7CFB\u5BA2\u6237
+msg.user.pwd.original.error=\u539F\u59CB\u5BC6\u7801\u9519\u8BEF
+msg.user.pwd.old.not.same.new=\u65B0\u5BC6\u7801\u4E0D\u80FD\u548C\u65E7\u5BC6\u7801\u76F8\u540C
 
-msg_auth_empty=\u6743\u9650\u9A8C\u8BC1\u4FE1\u606F\u4E3A\u7A7A
-msg_auth_fail=\u6743\u9650\u9A8C\u8BC1\u5931\u8D25
-msg_auth_denied=\u6743\u9650\u4E0D\u8DB3
-msg_auth_token_error=token\u9519\u8BEF
-msg_auth_token_empty=token\u4E3A\u7A7A
-msg_auth_token_not_exist=token\u8FC7\u671F,\u8BF7\u91CD\u65B0\u767B\u5F55
-msg_auth_token_illegal=token\u4E0D\u5408\u6CD5
+msg.auth.empty=\u6743\u9650\u9A8C\u8BC1\u4FE1\u606F\u4E3A\u7A7A
+msg.auth.fail=\u6743\u9650\u9A8C\u8BC1\u5931\u8D25
+msg.auth.denied=\u6743\u9650\u4E0D\u8DB3
+msg.auth.token.error=token\u9519\u8BEF
+msg.auth.token.empty=token\u4E3A\u7A7A
+msg.auth.token.not.exist=token\u8FC7\u671F,\u8BF7\u91CD\u65B0\u767B\u5F55
+msg.auth.token.illegal=token\u4E0D\u5408\u6CD5
 
-msg_role_not_exist=\u8BE5\u89D2\u8272\u4E0D\u5B58\u5728
-msg_role_not_operate_admin=\u4E0D\u80FD\u64CD\u4F5C\u8D85\u7EA7\u7BA1\u7406\u5458
-msg_role_permission_denied=\u89D2\u8272\u6743\u9650\u4E0D\u8DB3
-msg_role_unassigned_resource=\u89D2\u8272\u672A\u5206\u914D\u8D44\u6E90
+msg.role.not.exist=\u8BE5\u89D2\u8272\u4E0D\u5B58\u5728
+msg.role.not.operate.admin=\u4E0D\u80FD\u64CD\u4F5C\u8D85\u7EA7\u7BA1\u7406\u5458
+msg.role.permission.denied=\u89D2\u8272\u6743\u9650\u4E0D\u8DB3
+msg.role.unassigned.resource=\u89D2\u8272\u672A\u5206\u914D\u8D44\u6E90
 
-msg_param_error=\u53C2\u6570\u9519\u8BEF
-msg_param_not_null=\u53C2\u6570\u4E0D\u80FD\u4E3A\u7A7A
-msg_param_invalid=\u53C2\u6570\u975E\u6CD5
-msg_param_required_is_null=\u5FC5\u4F20\u53C2\u6570\u4E0D\u80FD\u4E3A\u7A7A
+msg.param.error=\u53C2\u6570\u9519\u8BEF
+msg.param.not.null=\u53C2\u6570\u4E0D\u80FD\u4E3A\u7A7A
+msg.param.invalid=\u53C2\u6570\u975E\u6CD5
+msg.param.required.is.null=\u5FC5\u4F20\u53C2\u6570\u4E0D\u80FD\u4E3A\u7A7A
 
-msg_format_param_required_is_null=\u5FC5\u4F20\u53C2\u6570 {0} \u4E0D\u80FD\u4E3A\u7A7A
+msg.format.param.required.is.null=\u5FC5\u4F20\u53C2\u6570 {0} \u4E0D\u80FD\u4E3A\u7A7A
 
-msg_db_error=\u6570\u636E\u5E93\u9519\u8BEF
-msg_db_create_fail=\u65B0\u589E\u5931\u8D25
-msg_db_delete_fail=\u5220\u9664\u5931\u8D25
-msg_db_modify_fail=\u66F4\u65B0\u5931\u8D25
-msg_db_query_fail=\u67E5\u8BE2\u5931\u8D25
-msg_db_duplicate_key_error=\u6570\u636E\u5E93\u4E3B\u952E\u91CD\u590D
-msg_db_data_exist=\u6570\u636E\u5DF2\u5B58\u5728
-msg_db_data_none=\u6570\u636E\u4E0D\u5B58\u5728
+msg.db.error=\u6570\u636E\u5E93\u9519\u8BEF
+msg.db.create.fail=\u65B0\u589E\u5931\u8D25
+msg.db.delete.fail=\u5220\u9664\u5931\u8D25
+msg.db.modify.fail=\u66F4\u65B0\u5931\u8D25
+msg.db.query.fail=\u67E5\u8BE2\u5931\u8D25
+msg.db.duplicate.key.error=\u6570\u636E\u5E93\u4E3B\u952E\u91CD\u590D
+msg.db.data.exist=\u6570\u636E\u5DF2\u5B58\u5728
+msg.db.data.none=\u6570\u636E\u4E0D\u5B58\u5728
 
-msg_file_not_exist=\u6587\u4EF6\u4E0D\u5B58\u5728
-msg_file_directory_not_exist=\u76EE\u5F55\u4E0D\u5B58\u5728
-msg_file_not_null=\u6587\u4EF6\u4E0D\u80FD\u4E3Anull
-msg_file_directory_not_null=\u76EE\u5F55\u4E0D\u80FD\u4E3Anull
-msg_file_upload_failed=\u6587\u4EF6\u4E0A\u4F20\u5931\u8D25
-msg_file_download_failed=\u6587\u4EF6\u4E0B\u8F7D\u5931\u8D25
+msg.file.not.exist=\u6587\u4EF6\u4E0D\u5B58\u5728
+msg.file.directory.not.exist=\u76EE\u5F55\u4E0D\u5B58\u5728
+msg.file.not.null=\u6587\u4EF6\u4E0D\u80FD\u4E3Anull
+msg.file.directory.not.null=\u76EE\u5F55\u4E0D\u80FD\u4E3Anull
+msg.file.upload.failed=\u6587\u4EF6\u4E0A\u4F20\u5931\u8D25
+msg.file.download.failed=\u6587\u4EF6\u4E0B\u8F7D\u5931\u8D25
 
-msg_mail_username_null=\u90AE\u4EF6\u53D1\u9001\u4EBA\u4E0D\u80FD\u4E3A\u7A7A
-msg_mail_password_null=\u90AE\u4EF6\u53D1\u9001\u4EBA\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
-msg_mail_from_null=\u90AE\u4EF6\u53D1\u9001\u5730\u5740\u4E0D\u80FD\u4E3A\u7A7A
-msg_mail_to_null=\u90AE\u4EF6\u6536\u4EF6\u4EBA\u4E0D\u80FD\u4E3A\u7A7A
-msg_mail_content_null=\u90AE\u4EF6\u5185\u5BB9\u4E0D\u80FD\u4E3A\u7A7A
+msg.mail.username.null=\u90AE\u4EF6\u53D1\u9001\u4EBA\u4E0D\u80FD\u4E3A\u7A7A
+msg.mail.password.null=\u90AE\u4EF6\u53D1\u9001\u4EBA\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
+msg.mail.from.null=\u90AE\u4EF6\u53D1\u9001\u5730\u5740\u4E0D\u80FD\u4E3A\u7A7A
+msg.mail.to.null=\u90AE\u4EF6\u6536\u4EF6\u4EBA\u4E0D\u80FD\u4E3A\u7A7A
+msg.mail.content.null=\u90AE\u4EF6\u5185\u5BB9\u4E0D\u80FD\u4E3A\u7A7A
 
-msg_sys_error=\u7CFB\u7EDF\u5185\u90E8\u9519\u8BEF,\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458
-msg_sys_maintain=\u7CFB\u7EDF\u7EF4\u62A4\u4E2D,\u8BF7\u8010\u5FC3\u7B49\u5F85
-msg_sys_busy=\u7CFB\u7EDF\u7E41\u5FD9,\u8BF7\u7A0D\u540E\u91CD\u8BD5
+msg.sys.error=\u7CFB\u7EDF\u5185\u90E8\u9519\u8BEF,\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458
+msg.sys.maintain=\u7CFB\u7EDF\u7EF4\u62A4\u4E2D,\u8BF7\u8010\u5FC3\u7B49\u5F85
+msg.sys.busy=\u7CFB\u7EDF\u7E41\u5FD9,\u8BF7\u7A0D\u540E\u91CD\u8BD5
 
-msg_request_url_not_exist=\u8BF7\u6C42URL\u4E0D\u5B58\u5728
-msg_request_http_method_not_supported=\u8BF7\u6C42\u65B9\u5F0F\u4E0D\u652F\u6301
-msg_request_media_type_not_supported=\u8BF7\u6C42\u5A92\u4F53\u7C7B\u578B\u4E0D\u652F\u6301
-msg_request_time_out=\u8BF7\u6C42\u8D85\u65F6
+msg.request.url.not.exist=\u8BF7\u6C42URL\u4E0D\u5B58\u5728
+msg.request.http.method.not.supported=\u8BF7\u6C42\u65B9\u5F0F\u4E0D\u652F\u6301
+msg.request.media.type.not.supported=\u8BF7\u6C42\u5A92\u4F53\u7C7B\u578B\u4E0D\u652F\u6301
+msg.request.time.out=\u8BF7\u6C42\u8D85\u65F6
 
-msg_format_request_url_not_exist=\u8BF7\u6C42URL {0} \u4E0D\u5B58\u5728
-msg_format_request_http_method_not_supported=\u8BF7\u6C42\u65B9\u5F0F {0} \u4E0D\u652F\u6301
-msg_format_request_media_type_not_supported=\u8BF7\u6C42\u5A92\u4F53\u7C7B\u578B {0} \u4E0D\u652F\u6301
+msg.format.request.url.not.exist=\u8BF7\u6C42URL {0} \u4E0D\u5B58\u5728
+msg.format.request.http.method.not.supported=\u8BF7\u6C42\u65B9\u5F0F {0} \u4E0D\u652F\u6301
+msg.format.request.media.type.not.supported=\u8BF7\u6C42\u5A92\u4F53\u7C7B\u578B {0} \u4E0D\u652F\u6301
 
-msg_timestamp_null=\u65F6\u95F4\u6233\u4E0D\u80FD\u4E3A\u7A7A
-msg_timestamp_error=\u65F6\u95F4\u6233\u9519\u8BEF
+msg.timestamp.null=\u65F6\u95F4\u6233\u4E0D\u80FD\u4E3A\u7A7A
+msg.timestamp.error=\u65F6\u95F4\u6233\u9519\u8BEF
